fixed spacing

--- a/index.css
+++ b/index.css
@@ -26,3 +26,18 @@ body {
 .answer {
     text-align: center;
 }
+
+input {
+    margin-top:5px;
+    margin-bottom: 5px;
+}
+
+label {
+    display: block;
+}
+
+#submit-button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
